<resources>
    <string name="app_name">METGO_Encarnacion</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_busqueda">Busqueda</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_mapadeparadas">Mapa De Paradas</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_buses">Buses</string>
    <string name="menu_paradas">Paradas</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_sugerencia">Sugerencia</string>
    <string name="menu_reclamo">Reclamo</string>
    <string name="menu_tarifario">Tarifario</string>
    <string name="menu_acercade">Acerca De</string>
    <string name="titulo_acercade">Empresaa de Transportes de Lima y Callao</string>
</resources>